# VirusMutationsAI

./: .dockerignore  .gitattributes  .gitignore  README.md  __tmp.json  __tmp2.json  lerna.json  package.json  requirements.txt
backend/: .env  .gitignore  README.md  (+5 more)
backend2/: pyproject.toml
backend2/alembic/: env.py
backend2/alembic/versions/: 0aa8e1274114_add_table_user_config.py  1274cad53aab_add_abstract_column.py  1c5654acb520_extended_article_table.py  8a9cae072bb8_add_mutation_mapping_table.py  9608a32f30b5_added_article_publishing_date.py  aee5bafd13ed_add_table_user_config.py  b99ad2c39988_add_table_subscription_status.py  cf979cdeedcf_add_table_messagequeue.py  df419851a830_initial_revision.py  fb59a7a58b0b_add_table_subscription_config.py  fce89232880f_articles.py
backend2/src/: cli.py  main.py
backend2/src/api/: deps.py
backend2/src/api/api_v1/: api.py
backend2/src/commands/: __init__.py  articles.py  email.py  mutations.py  subscription.py
backend2/src/core/: article.py  article_parser.py  config.py  email.py  mutation.py  security.py  subscription.py  vcf_parser.py
backend2/src/db/: session.py
backend2/src/db/models/: __init__.py  article.py  mail.py  mutation_mapping.py  subscription.py  subscription_config.py  subscription_status.py  user.py  user_config.py
backend2/src/schemas/: __init__.py  article.py  common.py  subscription.py  token.py  user.py  user_config.py
backend2/src/templates/: account_verification_code.html  account_verification_code_subject.html  new_articles_for_mutations.html  new_articles_for_mutations_subject.html
(+173 files in other folders)
