[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aleksey Maydokin <alexey.maydokin@auriga.com>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
pydantic = "^1.7.2"
SQLAlchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
yagmail = "^0.14.245"
biopython = "^1.78"
lxml = "^4.6.1"
SQLAlchemy-Utils = "^0.36.8"
Jinja2 = "^2.11.2"
click = "^7.1.2"
MarkupSafe = "^1.1.1"
python-multipart = "^0.0.5"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
